--- a/css/boxerStyle.css
+++ b/css/boxerStyle.css
@@ -2829,7 +2829,7 @@ animation-play-state: paused; /* Остановка анимации */
 /* classic */
 .wrapper_grid_inf{
     display: grid;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: minmax(440px,40%) minmax(360px,55%);
     grid-template-rows: auto;
     min-height: 675px;
     background-color: white;
@@ -2919,7 +2919,7 @@ animation-play-state: paused; /* Остановка анимации */
     width: 100%;
     height: 100%;
 }
-@media screen and (max-width:1100px) {
+@media screen and (max-width:800px) {
     .wrapper_grid_inf{
         grid-template-columns: 100%;
         grid-template-rows: auto auto;
