--- a/css/boxerStyle.css
+++ b/css/boxerStyle.css
@@ -23,7 +23,7 @@
     justify-content: center;
 }
 .boxer_header_content_name{
-    flex: 0 1 250px;
+    flex: 0 1 auto;
     height: 100%;
     display: flex;
     align-items: center;
@@ -227,8 +227,16 @@
     text-decoration: none;
     color: black;
 }
-@media screen and (max-width:700px){
+@media screen and (max-width:1100px){
+    .boxer_header_content_name{
+        flex: 1 1 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
     .boxer_header_content_burger{
+        flex: 1 1 150px;
         display: flex;
     }
     .boxer_header_content-el{
@@ -322,7 +330,9 @@
     }
     .boxer_header_content_buttons_wrap-btn2{
         margin-top: 20px;
-        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
         height: 55px;
         background-color: red;
         border: 2px solid red;
@@ -342,6 +352,11 @@
     }
     header .link_head{
         width: 90%;
+    }
+}
+@media screen and (max-width:700px){
+    .boxer_header_content_buttons_wrap-btn2{
+        width: 100%;
     }
 }
 .img-wrapper{
@@ -945,6 +960,11 @@ animation-play-state: paused; /* Остановка анимации */
     .wrap-icon{
         display: none;
     }
+    .text_up_p {
+        font-size: 25px;
+    }
+}
+@media screen and (max-width:700px){
     .wrap-cont-text{
         margin-top: 10px;
         width: 95%;
@@ -969,7 +989,7 @@ animation-play-state: paused; /* Остановка анимации */
     background-color: red;
     border-radius: 50%;
 }
-@media screen and (max-width:750px){
+@media screen and (max-width:700px){
     .wrap-cont-title{
         margin-top: 0px;
         justify-content: center;
@@ -1937,7 +1957,7 @@ animation-play-state: paused; /* Остановка анимации */
     background-color: rgb(235, 235, 235);
     transition: all .5s ease;
 }
-@media screen and (max-width:700px){
+@media screen and (max-width:1100px){
     .perspective-block-right{
         position: absolute;
         top:0;
@@ -2478,7 +2498,7 @@ animation-play-state: paused; /* Остановка анимации */
     width: 35%;
     height: 750px;
 }
-@media screen and (max-width:700px){
+@media screen and (max-width:1100px){
     .perspective-block-right2{
         position: absolute;
         top:0;
@@ -5368,6 +5388,11 @@ body::-webkit-scrollbar-thumb {
 .container-sub_num{
     width: 153.2px;
     height: 38.2px;
+}
+@media screen and (max-width:1000px) {
+    .content{
+        height: auto;
+    }
 }
 @media screen and (max-width:700px) {
     .content{
