--- a/css/boxerStyle.css
+++ b/css/boxerStyle.css
@@ -39,7 +39,7 @@
     flex-direction: row;
 }
 .boxer_header_content_navigation{
-    flex: 1 1 600px;
+    flex: 1 1 800px;
     height: 100%;
 }
 .boxer_header_content_navigation_ul{
@@ -525,6 +525,7 @@
 .content{
     width: 100%;
     height: 675px;
+    min-height: 625px;
     display: flex;
     transition: all .5s ease;
     background-color: white;
@@ -545,7 +546,7 @@
     gap:10px;
 }
 .wrap-icon{
-    flex: 1 1 40%;
+    flex: 1 0 500px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -562,12 +563,22 @@
     flex: 0 0 100px;
     height: 100%;
 }
+@media screen and (max-width:1100px){
+    .nothing{
+        flex: 0 0 75px;
+    }
+}
 .wrap-cont-title{
     margin-top: 70px;
     width: 100%;
     height: auto;
     display: flex;
     align-items: center;
+}
+@media screen and (max-width:1000px){
+    .wrap-cont-title{
+        margin-top: 35px;
+    }
 }
 .wrap-cont-title-p{
     font-size: 60px;
@@ -768,13 +779,14 @@ animation-play-state: paused; /* Остановка анимации */
 .wrap-cont-text-block-text{
     width: 100%;
     height: auto;
+    margin-bottom: 10px;
 }
 .wrap-cont-text-block-text-p{
     font-size: 17px;
     margin-left: 3px;
 }
 .wrap-cont-text-block-btn{
-    margin-top: 10px;
+    margin-top: auto;
     width: 100%;
     height: auto;
 }
@@ -3333,6 +3345,11 @@ animation-play-state: paused; /* Остановка анимации */
     transition: all .5s ease;   
     left: 0;
 }
+@media screen and (max-width:670px){
+    .card_box_item {
+        width: min(400px, 93%);
+    }
+}
 .item_imgs:hover .imgs_wrapper{
     left: 0;
 }
@@ -5093,6 +5110,36 @@ animation-play-state: paused; /* Остановка анимации */
     width: 100%;
     height: auto;
 }
+/* @media screen and (max-width:1300px){
+    .buy_boxer{
+        width: 95%;
+    }
+    .boxer_buy{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: space-between;
+    }
+    .businesss_benefits_item_del {
+        flex: 0 1 550px !important;
+        width: 100%;
+    }
+} */
+@media screen and (max-width:1300px){
+    .boxer_buy{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .businesss_benefits_item_del {
+        flex: 0 1 48% !important;
+        width: 100%;
+    }
+}
 @media screen and (max-width:900px){
     .buy_boxer{
         width: 95%;
@@ -5494,6 +5541,29 @@ body::-webkit-scrollbar-thumb {
     transform: scaleY(1.08);
     width: 100%;
     height: 740px;
+}
+@media screen and (max-width:1020px){
+    .rent-wrapp__img{
+        min-width: 0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .rent-wrapp__image{
+        transform: scaleY(1.08);
+        width: min(600px,100%);
+    }
+}
+@media screen and (max-width:600px){
+    .rent-wrapp__image{
+        transform: scaleY(1.08) scaleX(1.3);
+    }
+}
+@media screen and (max-width:400px){
+    .rent-wrapp__image{
+        transform: scaleY(1.08) scaleX(1.5);
+    }
 }
 .rent-wrapp__inf{
     flex: 0 1 50%;
